added note on historical countries

--- a/notebooks/UEFA-EDA.ipynb
+++ b/notebooks/UEFA-EDA.ipynb
@@ -22,95 +22,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/Users/denad/OneDrive/Documents/GitHub/uefa-championship-analysis-1/.venv/lib/python3.10/site-packages/numpy/_core/getlimits.py:545: UserWarning: Signature b'\\x00\\xd0\\xcc\\xcc\\xcc\\xcc\\xcc\\xcc\\xfb\\xbf\\x00\\x00\\x00\\x00\\x00\\x00' for <class 'numpy.longdouble'> does not match any known type: falling back to type probe function.\n",
-      "This warnings indicates broken support for the dtype!\n",
-      "  machar = _get_machar(dtype)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../inputs/euro_coaches.csv\n",
-      "../inputs/euro_lineups.csv\n",
-      "../inputs/euro_summary.csv\n",
-      "../inputs/logos/ALB.png\n",
-      "../inputs/logos/AUT.png\n",
-      "../inputs/logos/BEL.png\n",
-      "../inputs/logos/BUL.png\n",
-      "../inputs/logos/CIS.png\n",
-      "../inputs/logos/CRO.png\n",
-      "../inputs/logos/CZE.png\n",
-      "../inputs/logos/DEN.png\n",
-      "../inputs/logos/ENG.png\n",
-      "../inputs/logos/ESP.png\n",
-      "../inputs/logos/FIN.png\n",
-      "../inputs/logos/FRA.png\n",
-      "../inputs/logos/FRG.png\n",
-      "../inputs/logos/GER.png\n",
-      "../inputs/logos/GRE.png\n",
-      "../inputs/logos/HUN.png\n",
-      "../inputs/logos/IRL.png\n",
-      "../inputs/logos/ISL.png\n",
-      "../inputs/logos/ITA.png\n",
-      "../inputs/logos/LVA.png\n",
-      "../inputs/logos/MKD.png\n",
-      "../inputs/logos/NED.png\n",
-      "../inputs/logos/NIR.png\n",
-      "../inputs/logos/NOR.png\n",
-      "../inputs/logos/POL.png\n",
-      "../inputs/logos/POR.png\n",
-      "../inputs/logos/ROU.png\n",
-      "../inputs/logos/SCO.png\n",
-      "../inputs/logos/SUI.png\n",
-      "../inputs/logos/SVK.png\n",
-      "../inputs/logos/SVN.png\n",
-      "../inputs/logos/SWE.png\n",
-      "../inputs/logos/TCH.png\n",
-      "../inputs/logos/TUR.png\n",
-      "../inputs/logos/UKR.png\n",
-      "../inputs/logos/WAL.png\n",
-      "../inputs/logos/YUG.png\n",
-      "../inputs/matches/friendly_2021-2024.csv\n",
-      "../inputs/matches/qualifying_1960-2024.csv\n",
-      "../inputs/matches/euro/1960.csv\n",
-      "../inputs/matches/euro/1964.csv\n",
-      "../inputs/matches/euro/1968.csv\n",
-      "../inputs/matches/euro/1972.csv\n",
-      "../inputs/matches/euro/1976.csv\n",
-      "../inputs/matches/euro/1980.csv\n",
-      "../inputs/matches/euro/1984.csv\n",
-      "../inputs/matches/euro/1988.csv\n",
-      "../inputs/matches/euro/1992.csv\n",
-      "../inputs/matches/euro/1996.csv\n",
-      "../inputs/matches/euro/2000.csv\n",
-      "../inputs/matches/euro/2004.csv\n",
-      "../inputs/matches/euro/2008.csv\n",
-      "../inputs/matches/euro/2012.csv\n",
-      "../inputs/matches/euro/2016.csv\n",
-      "../inputs/matches/euro/2020.csv\n",
-      "../inputs/matches/euro/2024.csv\n",
-      "../inputs/matches/nations/2019.csv\n",
-      "../inputs/matches/nations/2021.csv\n",
-      "../inputs/matches/nations/2023.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "for dirname, _, filenames in os.walk('../inputs'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -855,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +861,36 @@
     "title = 'UEFA EURO Cup Participants (1960 - 2024)'\n",
     "\n",
     "# Plotting the heatmap with logos\n",
-    "plot_with_logos(df_team_pivot, title=title, size=(12, 32), is_save=True)\n"
+    "plot_with_logos(df_team_pivot, title=title, size=(12, 32), is_save=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Note on Historical Countries in UEFA EURO Data (1960 - 2024)\n",
+    "\n",
+    "The data spans from 1960 to 2024 and includes some countries that no longer exist (Find out more [here](https://en.wikipedia.org/wiki/UEFA)). Below is the information about these historical countries and the modern countries they have become:\n",
+    "\n",
+    "1. **CIS (Commonwealth of Independent States)**\n",
+    "   - **Existed:** 1992\n",
+    "   - **Countries:** Armenia 🇦🇲, Azerbaijan 🇦🇿, Belarus 🇧🇾, Georgia 🇬🇪, Kazakhstan 🇰🇿, Kyrgyzstan 🇰🇬, Moldova 🇲🇩, Russia 🇷🇺, Tajikistan 🇹🇯, Turkmenistan 🇹🇲, Ukraine 🇺🇦, Uzbekistan 🇺🇿\n",
+    "\n",
+    "2. **USSR (Union of Soviet Socialist Republics)**\n",
+    "   - **Existed:** 1922–1991\n",
+    "   - **Countries:** Armenia 🇦🇲, Azerbaijan 🇦🇿, Belarus 🇧🇾, Estonia 🇪🇪, Georgia 🇬🇪, Kazakhstan 🇰🇿, Kyrgyzstan 🇰🇬, Latvia 🇱🇻, Lithuania 🇱🇹, Moldova 🇲🇩, Russia 🇷🇺, Tajikistan 🇹🇯, Turkmenistan 🇹🇲, Ukraine 🇺🇦, Uzbekistan 🇺🇿\n",
+    "\n",
+    "3. **West Germany (Federal Republic of Germany)**\n",
+    "   - **Existed:** 1949–1990\n",
+    "   - **Countries:** Part of the current unified Germany 🇩🇪\n",
+    "\n",
+    "4. **Yugoslavia**\n",
+    "   - **Existed:** 1918–1992 (as the Kingdom of Yugoslavia and later the Socialist Federal Republic of Yugoslavia)\n",
+    "   - **Countries:** Bosnia and Herzegovina 🇧🇦, Croatia 🇭🇷, Macedonia 🇲🇰, Montenegro 🇲🇪, Serbia 🇷🇸, Slovenia 🇸🇮\n",
+    "\n",
+    "5. **Czechoslovakia**\n",
+    "   - **Existed:** 1918–1992\n",
+    "   - **Countries:** Czech Republic 🇨🇿, Slovakia 🇸🇰"
    ]
   }
  ],
