--- a/notebooks/UEFA-EDA.ipynb
+++ b/notebooks/UEFA-EDA.ipynb
@@ -679,6 +679,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### HTML Visualizaton Template 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
